# MurmurSSH

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  del_vite.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/context/: github-release-guidelines.md
.claude/prompts/: Phase-5.3.md  Phase-5.4.md  Phase-5.5.md  Phase-5.6.md  Phase-5.7.md  Phase-Execution-all-phases.md  phase-1-foundation.md  phase-2-sftp-workspace.md  phase-3-profile-management.md  phase-5-1-credential-hardening.md  (+3 more)
.cursor/: web-changes.md
.github/: pull_request_template.md
docs/: website-copy-source.json  website-docs-outline.md  website-feature-inventory.md
src/: dnd-state.js  dnd-state.ts  main.js  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  launch.rs  local.rs  mod.rs  profile.rs  settings.rs  sftp.rs  ssh.rs  transfer.rs  workspace.rs
src-tauri/src/models/: mod.rs  profile.rs  settings.rs  sftp.rs  transfer.rs
src-tauri/src/services/: credentials_store.rs  ftp_service.rs  known_hosts_service.rs  launch_service.rs  local_service.rs  mod.rs  profile_service.rs  runtime_key_service.rs  secrets_service.rs  session_trust_store.rs  settings_service.rs  sftp_service.rs  ssh_config_service.rs  ssh_service.rs  ssh_session_service.rs  transfer_cancel.rs  transfer_queue.rs  workspace_service.rs
vault/: MurmurSSH Optimization Roadmap.md  MurmurSSH Production Hardening.md
(+54 files in other folders)
