[package]
name = "murmurssh"
version = "1.4.5"
edition = "2021"

[lib]
name = "murmurssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
notify = "6"
suppaftp = { version = "8", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
